add key in index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
             id="circuit-code"></textarea>
             <button class="btn btn-primary" onclick="adopt()">回路の更新</button>
             <button class="btn btn-primary" onclick="save()">保存</button>
-            <h1>部品情報</h1>
-            <div class="">
-                
-            </div>
+            <h1 class="mt-5">部品情報</h1>
+            
+            <textarea
+            rows="10"
+            class="form-control mb-2"
+            style="font-family: 'MS Gothic' !important;"
+            id="key"></textarea>
         </div>
     </div>
 
